--- a/Form1.resx
+++ b/Form1.resx
@@ -123,45 +123,24 @@
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>347, 17</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>242, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonCopyTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsMUqGzUh6kY2JspGixKgH9CW0gJKSsuTdCjtTIG282ixM9M53jcUNgVPcvIWc99v7j3v
-        NrU5g+Pd7ki0ZyjC7MPzSeGeoflk+2AodqHff7/55tSppv/pmjsU03U9KXOdKeScqjMprzFJ1diQV2Fd
-        7sW35+58OVMvb5T9RXgtTxf9qQPPpKpsYpkzXtWZL60xz488u/hkdqBe3qiOwflkkQCRNFkSEI1NJjhL
-        yZzlucb4X53der2Qqpc3SgBKBFiiy3GyAPmoi3ezCkantvDSu2n53li8fPtNrHLjVXitxel7er730+kj
-        gEqAFbosLCAh6mL0ZwYmAJnXoJBzqgGpoCGrahj2Kuh2R7823x0/ezTCIUBYjOKhv+6UTfiZgeCGDsoG
-        E8tl8KoJygae6W1cejTjORohIessqRycAiLaLlZMLKQNLEgG5v5omEzsY10ug7IBZYMu13vTAohXOA5Q
-        2jexlDEQ3zRA2cC3XoV3tYLPcY5NGue66yMBXBEmlfINgBECqPvAr6xpOZ6pIbShwceqVidZtYYeAWh/
-        HFwWHeRKtDxFjcklWihappHvNIIFAH5na1jZqiFGnYQlkYeGHDdhF4ArzsC3q865qM0RWG99EFg5dKc7
-        RCMACRlIKgfnKsGWMkA4Detbt+uDaT3lceocjOi7Zf1EQKGiE4A6OEldzxeRLRVOBOTUAuzPoqiXN+py
-        f3BnmxugbJAtaqBsQNlYzpN392poHpiq1ssb1dI7O93SF9iy9Y2ZNkeQ2xxzZHEGeVuff6/VMZPreBgq
-        /QOD66IDHHbj6AAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLLTxNRFMZZqvG/ceMOQyi+EhJAihtjookL
+        Y0yIxdD4KEojbLHKRo2vlWxMlI0WJUAf0JbSAkpKy5V0KG2nQDtzabEz0/k8dyhsCn7Jl7uYc39zzndP
+        U5szONbtjkR7hiLMPjyXFO4Zmku2D4Zi5/r9d5uvT55o+p+uuEMxXdeTea4zmZxTdSYVNCapGhvyyqzL
+        vfD6zK0vp+rljbI/C68W6KI/te/pVJWNL3HGqzrzpTXm+VFg5x/NDNTLG9UxOJcsESCSJksCorGJBGep
+        PGcFrjH+V2c3Xs6n6uWNEgCFAIt0OU4WIB918WZGxujkJp57NyzfeRcv33wVq1x7EV5tcfoen+39dPIQ
+        oBJgmS4LC0iIuhj9mYEJIM9rkMk51YBU1JBVNQx7ZXS7o1+bb4+dPhzhACAsRvHQX7fLJvzMQHBdB2WD
+        8aUyeNUEZQPP1BYuPJj2HI6QyOssKe+fAiLaLlVMzKcNzEsGZv9omEjsYS1fBmUDygZdrvemBRCvcBRA
+        2TOxmDEQ3zBA2cC3VoV3pYLPcY4NGueq6yMBXBEmKYUGwAgB1D3gV9a0HM/UEFrX4GNVq5OsWkOPALQ/
+        DC6JDnIKLU9JY3mFFoqWaeQ7jWABgN/ZGpY3a4hRJ2FJ5KEhx03YBeCSM/DtsnM2anME1lrvBZYP3OkO
+        0QhAIg8k5f1zhWCLGSCchvWt2/XBtJ7yKHUORvSdsn4soFjRCUAdHKeupwvIKsVjATm1CPuTKOrljbrY
+        H9ze4gYoG2RLGigbUDaWC+Sd3RqaByar9fJGtfTOTLX0BTZtfW9NmyPIbY5ZsjiDvK3Pv9vqmM513A8p
+        /wB7YKH8Qx46KgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Index.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Solidity.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Foreground.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Used.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="UsedGlobal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -224,7 +203,7 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVDhPjZLZTxNRGMX7D/lAl8El/hc+GsNW6AIEEJFN
-        q9EHNYJEI5FFqoWwiiK7HUBTRShULBhMWUoXhFKgK9Ap3Y7f3CpPhDDJyc3M3PM7Z+Z+Ek7Dlyo0fINc
+        q8YHNYJEI5FFqoWwiiK7HUBTRShULBhMWUoXhFKgK9Ap3Y7f3CpPhDDJyc3M3PM7Z+Z+Ek7Dlyo0fINc
         y1tIfk47GOO0uhSn5UHvmC4VTuBK8SQuF/HILBgLXC3m52Wa0WsS8eLUfMuiM4JFp4BoPAWBFDlOIniU
         wG4wBl84zu6FWBJ7oTh0ugcpvdURv/HYtM+ph3MlnNZoW3REcK/Xi0iMzLQx7+ks/Adx7JIhHEkwcIhW
         9/4x1jxRGK1+TFr3wZXwUQJMBK0EuNu9wzaJEgHeUAz+wzhLFhvsUBv7ThRr2wKq2134uhyAQq1LEWAw
@@ -234,42 +213,42 @@
         t05W+VYbAch4s2WVtIKXA6uQ5X1IA6aWgmR2/5PrJJ2ZKblCb2fmMjKWNtlQ0vQb9X3LkOX2iwAjeGsA
         1QY3O+/zqKjxF550LUGa0wfJRfqJ4wsBVlegI3v0JedMiTOhefETD9sXIM3uJUAhj1GLnxqkAab1z2dK
         BKgafuB+m4UA3ZBk0hwMzfkI4Dx3A2XdHGpbzMjIokmUqowb/d/30D+9e+r3nqba5llUvZpBxnWDT6JQ
-        f3qmUI+PyLPH/QrVGI3nCJswef4gZMoBOqr3kOa+ox/WS5V7KLWbJV/I6gxlZHd++wufTA7quk//MQAA
+        f3qmUI+PyLPH/QrVGI3nCJswef4gZMoBOqr3kOa+ox/WS5V7KLWbJV/I6gxlZHd++wubsA7pXQyMSQAA
         AABJRU5ErkJggg==
 </value>
   </data>
   <data name="buttonCopyFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ5SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsMUqG0TdysZE2WhRAvQD2lJaQElpeZKW0s4UaGceLXZmOsf7hsKm4ElO3mLu+829592m
-        NmdwotsdifYMRZh9eCEp3DO0kGwfDMUu9fsfNt+ePtP0P91wh2K6riclrjOZnFd1liloLKNqbMgrsy73
-        0rsL976cq5c3yv4qvF6gi/7UoWdTVTa5whmv6syX1pjnR4FdfjY3UC9vVMfgQrJEgEianBEQjU0lOEtJ
-        nBW4xvhfnd15u5iqlzdKABQCLNPlOFmAfNTF+JyM0eltvPZuWX7wMV6+Oxar3HoTXm9x+p5f7P109hig
-        EmCVLgsLSIi6GP2ZhQlA4jXI5LxqIFPUkFM1DHtldLujX5vvT5w/HuEIICxG8dBfd8sm/MxAcFMHZYPJ
-        lTJ41QRlA8/MDq48mfUcj5CQdJaUD08BEW2XKiYW0wYWMwbm/2iYShxgQyqDsgFlgy7XuGkBxCucBFAO
-        TCxnDcS3DFA28G1U4V2r4HOcY4vGuen6QABXhGWUQgNghADqAfArZ1qOZ2sIbWrwsarVSU6toUcA2p8G
-        V0QHeYWWp6QxSaGFomUa+U4jWADgd66G1e0aYtRJOCPy0JDnJuwCcM0Z+HbdOR+1OQIbrY8Cq0fudIdo
-        BCAhAUn58Fwj2HIWCKdhfet2vTetpzxJnYMRfa+snwooVnQCUAenqevlEnJK8VRAXi3C/iKKenmjrvYH
-        d3e4AcoGuZIGygaUjeUCeW+/huaB6Wq9vFEtvXMzLX2BbVvfmGlzBLnNMU8WZ5C39fn3Wx2z+Y7HIeUf
-        WTSh4IiqA9wAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ6SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
+        xpgQi6HxoyiNsMUqCwXjVjYmykaLEqAf0JbSAkpKy5O0lHamQDvzaLEz0zneNxQ2BU9y8hZz32/uPe82
+        tTmDE93uSLRnKMLswwtJ4Z6hhWT7YCh2qd//sPn29Jmm/+mGOxTTdT0pcZ3J5Lyqs0xBYxlVY0NemXW5
+        l8Yu3Ptyrl7eKPur8HqBLvpTh55NVdnkCme8qjNfWmOeHwV2+dncQL28UR2DC8kSASJpckZANDaV4Cwl
+        cVbgGuN/dXbn7WKqXt4oAVAIsEyX42QB8lEX43MyRqe38dq7ZfnBx3j57vtY5dab8HqL0/f8Yu+ns8cA
+        lQCrdFlYQELUxejPLEwAEq9BJudVA5mihpyqYdgro9sd/dp8f+L88QhHAGExiof+uls24WcGgps6KBtM
+        rpTBqyYoG3hmdnDlyazneISEpLOkfHgKiGi7VDGxmDawmDEw/0fDVOIAG1IZlA0oG3S5xkwLIF7hJIBy
+        YGI5ayC+ZYCygW+jCu9aBZ/jHFs0zk3XBwK4IiyjFBoAIwRQD4BfOdNyPFtDaFODj1WtTnJqDT0C0P40
+        uCI6yCu0PCWNSQotFC3TyHcawQIAv3M1rG7XEKNOwhmRh4Y8N2EXgGvOwLfrzvmozRHYaH0UWD1ypztE
+        IwAJCUjKh+cawZazQDgN61u3a9y0nvIkdQ5G9L2yfiqgWNEJQB2cpq6XS8gpxVMBebUI+4so6uWNutof
+        3N3hBigb5EoaKBtQNpYL5L39GpoHpqv18ka19M7NtPQFtm1970ybI8htjnmyOIO8rc+/3+qYzXc8Din/
+        AFCpodl50reMAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="buttonPasteFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbAy+66qKLbrpOhHgpEdkI
-        WFHnHEkoMxujttaiNgp2aJRTPDRTZEiWNlvyttaaWxe11sx8RZTQSny5CdQLrC2/nfMD361n+2y/7Tzf
-        z/Occ35lG8VRoiN+phy7eXTuYL7Usn/5L4iOtVLifqG5y34c67k4VqfvEIRzsOEoEXFUebiVFmlLsa3y
-        M4dmX7qurc8N3MZMexX+/IwhP2YnCOdMmwqz0QbMRC798p8Xr5ZiWyXY5wYcyPRbMdWmRJqrRLpVwlOB
-        tK8C074TmOjQ8M/rySal2FYRwdtb+NpnRrqXxtQzE1LdZ3eQDNRgMkT/W/DjzU1M91BIhY1IdmpJYDf/
-        FXx/fZ1MmuzSE8F4hxbPPRSC7loEXbXovM8g4LLirkUJq9XK1tXVsWazmaUoiiGCbwkbkqEzxXB7NYYe
-        1+BFix1ra2tYWVnZw/LyMrLZ7G+TyeQkgtlYI1lz4kk1xvxVGPSp0dNkI42JRALxeHyTWCxGEARGo7Eo
-        mIlcwTgfHuXDwy0qfGo6hW5vIxEsLS0RFhcXN1lYWCACnU5XFGReXcYodxojzSp8eSjHxwdKhD1XiWD7
-        1Gg0uokg0Gq1RUG6z4rhZiUJf/bI8MF9EiF3PfL5/I6p2xEEarW6JOi1YMhbDA+6JHjvrETwnoUItk/d
-        IBKJEIFKpeIFtPhdMixcIDNST2v5X0ljOECjy2tHLpfbM3l+fp4gCBQKhbOMY8RKji4fEjbZwMcchtum
-        R6FQIFvshyCQSqXO0nXaWQ6H44DBYLih1+tZ/kOxGo2G5d+X5Vdm+amsXC5nZTIZK5FILv4FZmdlRlOU
-        r7AAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbAy666qKLbrpOhBBKRDYC
+        VtQ5SEqZ2Ri1NRe1kbBjs5zCoZkiA7K0sSVva625dVFrzch8QZSUytebAL2Q2vLbOT/wBbWe7bP9tvN8
+        P89zzvlVbBVLCY55jCLs5dGFw7lSy8HluSQ44aaEw3xzwHoSm9kY1mfvEvizr/k4EbGUKOimBepSbKc8
+        xiOZUNuNzYWRO5jvrcGfn1HkJqwE/jzXo0Am0oz58JVfnovC9VJsp3j7wogNc8NmzPTIkWarkHaLOSqR
+        dlVi1nUKU30q7nkT2aQU2ykieNOKryET0kM0Zp4ZkBo4X0bSW4dpP/1vwY/XtzE7SCEV1CPZryaBvfxX
+        8P3VTTJpOqAlgsk+NZ63U/A56+Fz1KO/zQivw4x7jXKYzWamoaGBMZlMDEVRRiL4Frcg6T9XDPfWIvG4
+        Di+6rSgUClhbW9tHPp/H4uLib4PBYCeCTLSFrDn1pBYTnhqMupQY7LSQxng8jlgstk00GiXwAr1eXxTM
+        h69hkguPc+GxbgU+dp7BQEcLEayurhJWVla2WV5eJgKNRlMUzL28inH2LL50KfD5oQwfHsgRbL9OBLun
+        RiKRbXiBWq0uCtIhM8a65CT8qV2K987T8DubkMvlyqbuhhcolcqSYKgRiY5ieNQhxjt7FXz3G4lg99Qt
+        wuEwESgUCk5AC98mg/wFMiH1tJ77lTTGvDQCHVZks9l9k5eWlgi8oLq62l7BGoVylhYl+E22cBmPwmnR
+        YmNjg2xxELxAIpHYS9epvGw22yGdTndLq9Uy3IdiVCoVw70vw63McFMZmUzGSKVSRiwWX/4LX1ZlRM2Y
+        WpoAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
